# vkdevicechooser

./: .gitignore  LICENSE.md  Makefile  README.md  VkLayer_device_chooser.json  layer.cpp  meson.build  vkdevicechooser.json
vulkan/: vk_layer_dispatch_table.h
